--- a/tasks/task-terraform-cli.yaml
+++ b/tasks/task-terraform-cli.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: >
       {"apiVersion":"tekton.dev/v1beta1","kind":"Task","metadata":{"annotations":{"tekton.dev/categories":"CLI","tekton.dev/displayName":"terraform
-      cli","tekton.dev/pipelines.minVersion":"0.12.1","tekton.dev/platforms":"linux/amd64","tekton.dev/tags":"cli"},"creationTimestamp":"2023-04-13T17:36:17Z","generation":7,"labels":{"app.kubernetes.io/version":"0.2"},"managedFields":[{"apiVersion":"tekton.dev/v1beta1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{},"f:tekton.dev/categories":{},"f:tekton.dev/displayName":{},"f:tekton.dev/pipelines.minVersion":{},"f:tekton.dev/platforms":{},"f:tekton.dev/tags":{}},"f:labels":{".":{},"f:app.kubernetes.io/version":{}}},"f:spec":{".":{},"f:description":{},"f:params":{}}},"manager":"kubectl-client-side-apply","operation":"Update","time":"2023-04-13T17:36:17Z"},{"apiVersion":"tekton.dev/v1beta1","fieldsType":"FieldsV1","fieldsV1":{"f:spec":{"f:results":{}}},"manager":"kubectl-edit","operation":"Update","time":"2023-04-13T20:25:34Z"},{"apiVersion":"tekton.dev/v1beta1","fieldsType":"FieldsV1","fieldsV1":{"f:spec":{"f:steps":{},"f:workspaces":{}}},"manager":"Mozilla","operation":"Update","time":"2023-04-13T20:38:24Z"}],"name":"terraform-cli","namespace":"tekton-hacking","resourceVersion":"107310760","uid":"2fe7f856-638f-4c1f-a7cc-49e6652ec2c3"},"spec":{"description":"Terraform
+      cli","tekton.dev/pipelines.minVersion":"0.12.1","tekton.dev/platforms":"linux/amd64","tekton.dev/tags":"cli"},"creationTimestamp":"2023-04-14T12:16:36Z","generation":1,"labels":{"app.kubernetes.io/version":"0.2"},"managedFields":[{"apiVersion":"tekton.dev/v1beta1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{},"f:tekton.dev/categories":{},"f:tekton.dev/displayName":{},"f:tekton.dev/pipelines.minVersion":{},"f:tekton.dev/platforms":{},"f:tekton.dev/tags":{}},"f:labels":{".":{},"f:app.kubernetes.io/version":{}}},"f:spec":{".":{},"f:description":{},"f:params":{},"f:results":{},"f:steps":{},"f:workspaces":{}}},"manager":"kubectl-client-side-apply","operation":"Update","time":"2023-04-14T12:16:36Z"}],"name":"terraform-cli","namespace":"tekton-hacking","resourceVersion":"37680","uid":"5cf3e80a-f4da-4d84-9fc9-91ba4893bdd0"},"spec":{"description":"Terraform
       is an open-source infrastructure as code software tool created by
       HashiCorp.\nIt enables users to define and provision a datacenter
       infrastructure using a high-level configuration language known as
@@ -33,10 +33,10 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/platforms: linux/amd64
     tekton.dev/tags: cli
-  resourceVersion: '37680'
+  resourceVersion: '113988145'
   name: terraform-cli
-  uid: 5cf3e80a-f4da-4d84-9fc9-91ba4893bdd0
-  creationTimestamp: '2023-04-14T12:16:36Z'
+  uid: f8d32c1a-6fef-4c8b-9121-1d6aae20401c
+  creationTimestamp: '2023-04-16T12:11:53Z'
   generation: 1
   managedFields:
     - apiVersion: tekton.dev/v1beta1
@@ -61,9 +61,9 @@ metadata:
           'f:results': {}
           'f:steps': {}
           'f:workspaces': {}
-      manager: kubectl-client-side-apply
+      manager: kubectl-create
       operation: Update
-      time: '2023-04-14T12:16:36Z'
+      time: '2023-04-16T12:11:53Z'
   namespace: tekton-hacking
   labels:
     app.kubernetes.io/version: '0.2'
